--- a/index.html
+++ b/index.html
@@ -3,9 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sheikh Tais Academy - School Management App</title>
-    <meta name="description" content="Sheikh Tais Academy - Your comprehensive school management app for students, parents, and teachers.">
-    
+    <!-- Website Title -->
+    <title>Sheikh Tais Academy - Learn and Grow</title>
+
+    <!-- SEO Meta Tags -->
+    <meta name="description" content="Sheikh Tais Academy - A website developed by Momo Mustapha Sandi, empowering students with quality education and resources." />
+    <meta name="author" content="Momo Mustapha Sandi" />
+    <meta name="keywords" content="Sheikh Tais Academy, Sheikh Tais Accademy, education, learning, academy, online courses, students, Sierra Leone, Momo Mustapha Sandi" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://sheikh-tais-academy.vercel.app/" />
+
+    <!-- Open Graph / Facebook / WhatsApp / LinkedIn -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://sheikh-tais-academy.vercel.app/" />
+    <meta property="og:title" content="Sheikh Tais Academy - Learn and Grow" />
+    <meta property="og:description" content="Sheikh Tais Academy is a website developed by Momo Mustapha Sandi, empowering students with education and resources." />
+    <meta property="og:image" content="https://i.imghippo.com/files/fHg5750kXU.jpg" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://sheikh-tais-academy.vercel.app/" />
+    <meta name="twitter:title" content="Sheikh Tais Academy - Learn and Grow" />
+    <meta name="twitter:description" content="Sheikh Tais Academy is a website developed by Momo Mustapha Sandi, empowering students with education and resources." />
+    <meta name="twitter:image" content="https://i.imghippo.com/files/fHg5750kXU.jpg" />
+
+    <!-- Telegram / Discord / Slack -->
+    <meta
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     
